[package]
name = "address-book"
version = "0.1.0"
authors = ["Samir Halilcevic"]
edition = "2018"

[dependencies]
gtk = "^0.6.0"
gtk-test = "^0.3"
relm-attributes = "0.16.0"
relm= "0.16.0"
relm-test = "0.16.0"
relm-derive = "0.16.0"

diesel = { version = "1.0.0", features = ["sqlite"] }
# diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.9.0"

[features]
default = ["relm/unstable", "relm-derive/unstable"]
